// Copyright 2024 The Go Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

edition = "2023";

package net.proto2.go.open2opaque.testdata.flag_edition_test2;

import "google/protobuf/go_features.proto";

message M1 {
  option features.(pb.go).api_level = API_OPAQUE;

  message Nested1 {
    option
        /*multi-line*/
        features.(pb.go)
            .api_level = API_HYBRID;

    message Nested2 {}
  }

  map<string, bool> map_field = 10;
}

message M2 {
  message Nested1 {
    option features.(pb.go).api_level = API_HYBRID;
  }

  message Nested2 {}

  map<string, bool> map_field = 10;
}
